# OmdenaKnowledge_AIAgentsInferenceBenchmarking

./: .gitignore  AutogenAI.py  CrewAI.py  LanggraphAI.py  README.md  classification_benchmark.ipynb  create_dir_files.py  requirements.txt
Data Analysis with SQL Queries/: Data Analysis with SQL Queries using Amazon Dataset.ipynb
ai-agents-benchmarking/: .gitignore  README.md  main.py  requirements.txt
ai-agents-benchmarking/Documentation/: AI Agent Framework Benchmarking Project Documentation.docx
ai-agents-benchmarking/benchmarks/: complex_tasks.py  simple_tasks.py
ai-agents-benchmarking/coding/: analyze_sentiment.py  car_distance.py  distance_calculator.py  factorial.py  sentiment_analysis.py  tmp_code_d494d597ddf9b17d5b70e9a915c39d9a.py  (+2 more)
crewai/: benchmark_results.csv  main.py
reports/: date_fruit_analysis_report_20250406_011741.md
src/: README.md  config.yaml  rate_paragraph.py  requirements.txt  save_to_csv.py  setup.py
src/autogen/: agents.py  (+3 more)
src/simple_agent_common/: .gitignore  README.md  __init__.py  environment.yaml  pyproject.toml
src/simple_agent_common/data_classes/: __init__.py  configs.py  crop_prediction.py  metrics.py
src/simple_agent_common/multiagent/: __init__.py  benchmark_runner.py  orchestrator_base.py  prompts.py
src/simple_agent_common/simple_agent_common.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/simple_agent_common/singleagent/: __init__.py  prompts.py
src/simple_agent_common/utils/: __init__.py  config.py  dataset.py  env.py  extract_number.py  logging.py  memory.py  rate_limiter.py  token_counter.py
(+210 files in other folders)
